# substack-block-adapter

./: .gitignore  BUILD_RECEIPT.md  README.md  pyproject.toml
.github/workflows/: weekly-substack-mirror.yml
examples/: substack-block.toml
src/substack_block_adapter/: __init__.py  cli.py  mirror.py  models.py  substack.py
tests/: test_adapter.py  test_cli_watch.py
